--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,13 @@ body {
 }
 .row-content {
   margin: 0;
-  padding: 70px 0;
+  padding: 50px 0;
 }
 .row-content .col-content {
   padding: 0;
+}
+.navbar {
+  margin-bottom: 20px;
 }
 .navbar .navbar-brand img {
   height: 30px;
@@ -39,6 +42,13 @@ body {
 }
 #title-section p {
   max-width: 570px;
+  font: 500 normal 16px inter, sans-serif;
+  line-height: 1.5;
+}
+@media screen and (max-width: 768px) {
+  #title-section p {
+    max-width: 100%;
+  }
 }
 #title-section #talkForm {
   max-width: 450px;
@@ -71,6 +81,17 @@ body {
 #title-section .btn {
   border-radius: 40px;
 }
+#home .img-fluid {
+  max-height: 460px;
+  position: relative;
+  top: -50px;
+}
+@media screen and (max-width: 484px) {
+  #home .img-fluid {
+    height: auto;
+    width: 80%;
+  }
+}
 #talkModal .modal-header {
   background-color: #1d1d1d;
   color: #fff;
@@ -80,4 +101,38 @@ body {
 }
 #talkModal .modal-header .close:hover {
   color: #fff;
+}
+#attorneys * {
+  color: #fff;
+}
+#attorneys h2 {
+  font: 600 normal 54px inter, sans-serif;
+}
+#attorneys h3 {
+  font: 600 normal 32px inter, sans-serif;
+  line-height: 2.4;
+}
+#attorneys h4 {
+  font: 600 normal 24px inter, sans-serif;
+}
+#attorneys p {
+  font: 500 normal 16px inter, sans-serif;
+  color: #292929;
+  line-height: 1.5;
+}
+#attorneys .border-lg {
+  border-left: 1px solid #e6e6e6;
+}
+@media screen and (max-width: 991px) {
+  #attorneys .border-lg {
+    border: none;
+  }
+}
+#attorneys .card {
+  background-color: transparent;
+  border: 1px solid #2e2e2e;
+  border-radius: 16px;
+}
+#attorneys .card .btn {
+  border-radius: 40px;
 }
