--- a/css/styles.less
+++ b/css/styles.less
@@ -16,7 +16,7 @@
 @heading2-font: 600 normal 54px inter, sans-serif;
 @heading3-font: 600 normal 32px inter, sans-serif;
 @heading4-font: 600 normal 24px inter, sans-serif;
-@subtitle-font: 500 normal 18px inter, sans-serif;
+@subtitle-font: 500 normal 16px inter, sans-serif;
 @placeholder-button-font: 500 14px inter, sans-serif;
 @button-card-font: 600 14px inter, sans-serif;
 
@@ -30,7 +30,7 @@ body {
 
 .row-content {
     margin: 0;
-    padding: 70px 0;
+    padding: 50px 0;
     
     .col-content {
         padding: 0;
@@ -38,6 +38,7 @@ body {
 }
 
 .navbar {
+    margin-bottom: 20px;
     .navbar-brand img {
         height: 30px;
         width: auto;
@@ -75,6 +76,13 @@ body {
 
     p {
         max-width: 570px;
+        font: @subtitle-font;
+        line-height: 1.5;
+    }
+    @media screen and (max-width: 768px) {
+        p {
+            max-width: 100%;
+        }
     }
 
     #talkForm {
@@ -116,6 +124,20 @@ body {
     }
 }
 
+#home {
+    .img-fluid {
+        max-height: 460px;
+        position: relative;
+        top: -50px;
+    }
+    @media screen and (max-width: 484px) {
+        .img-fluid {
+            height: auto;
+            width: 80%;
+        }
+    }
+}
+
 #talkModal {
     .modal-header {
         background-color: @bg-primary;
@@ -126,6 +148,50 @@ body {
         }
         .close:hover {
             color: @bg-white;
+        }
+    }
+}
+
+#attorneys {
+    * {
+        color: @bg-white;
+    }
+
+    h2 {
+        font: @heading2-font;
+    }
+
+    h3 {
+        font: @heading3-font;
+        line-height: 2.4;
+    }
+
+    h4 {
+        font: @heading4-font;
+    }
+
+    p {
+        font: @subtitle-font;
+        color: @bg-subtitle;
+        line-height: 1.5;
+    }
+
+    .border-lg {
+        border-left: 1px solid @bg-light;
+    }
+    @media screen and (max-width: 991px) {
+        .border-lg {
+            border: none;
+        }
+    }
+
+    .card {
+        background-color: transparent;
+        border: 1px solid @bg-secondary;
+        border-radius: 16px;
+
+        .btn {
+            border-radius: 40px;
         }
     }
 }
