--- a/css/styles.less
+++ b/css/styles.less
@@ -22,6 +22,20 @@
 
 * {
     font-family: inter, sans-serif;
+    color: @bg-white;
+
+    h2 {
+        font: @heading2-font;
+    }
+
+    h3 {
+        font: @heading3-font;
+        line-height: 2.4;
+    }
+
+    h4 {
+        font: @heading4-font;
+    }
 }
 
 body {
@@ -77,6 +91,7 @@ body {
     p {
         max-width: 570px;
         font: @subtitle-font;
+        color: @bg-subtitle;
         line-height: 1.5;
     }
     @media screen and (max-width: 768px) {
@@ -153,23 +168,6 @@ body {
 }
 
 #attorneys {
-    * {
-        color: @bg-white;
-    }
-
-    h2 {
-        font: @heading2-font;
-    }
-
-    h3 {
-        font: @heading3-font;
-        line-height: 2.4;
-    }
-
-    h4 {
-        font: @heading4-font;
-    }
-
     p {
         font: @subtitle-font;
         color: @bg-subtitle;
@@ -193,5 +191,12 @@ body {
         .btn {
             border-radius: 40px;
         }
+    }
+}
+
+
+#practiceAreas {
+    img {
+        object-fit: cover;
     }
 }
