--- a/css/styles.css
+++ b/css/styles.css
@@ -158,3 +158,12 @@ body {
 #aboutus .media img {
   max-height: 60px;
 }
+#aboutus .border-bottom {
+  border-color: #2e2e2e !important;
+}
+#aboutus .bg-law-secondary {
+  background: #2e2e2e;
+}
+#aboutus .form-inline * {
+  height: 50px;
+}
