--- a/css/styles.less
+++ b/css/styles.less
@@ -229,4 +229,18 @@ body {
             max-height: 60px;
         }
     }
+
+    .border-bottom {
+        border-color: @bg-secondary !important;
+    }
+
+    .bg-law-secondary {
+        background: @bg-secondary;
+    }
+
+    .form-inline {
+        * {
+            height: 50px;
+        }
+    }
 }
