--- a/css/styles.less
+++ b/css/styles.less
@@ -244,3 +244,27 @@ body {
         }
     }
 }
+
+footer {
+    background: @bg-footer;
+    
+    .nav {
+        a {
+            font: @nav-item-font;
+            color: @bg-light;
+        }
+    
+        a:hover {
+            color: @bg-white;
+        }
+    }
+
+    a {
+        font: @subtitle-font;
+        color: @bg-secondary;
+    }
+
+    a:hover {
+        color: @bg-light;
+    }
+}
