--- a/css/styles.less
+++ b/css/styles.less
@@ -210,7 +210,8 @@ body {
         border-radius: 16px;
 
         h6 {
-            font: @bg-subtitle;
+            font: @subtitle-font;
+            font-size: 20px;
         }
 
         img {
